"""Initial migration

Revision ID: 0542159e00b6
Revises: 
Create Date: 2025-06-16 16:16:40.920925

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '0542159e00b6'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('bureau_de_vote',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('nom', sa.String(length=200), nullable=False),
    sa.Column('adresse', sa.String(length=255), nullable=False),
    sa.Column('region', sa.String(length=100), nullable=False),
    sa.Column('departement', sa.String(length=100), nullable=False),
    sa.Column('commune', sa.String(length=100), nullable=False),
    sa.Column('localisation', sa.JSON(), nullable=True),
    sa.Column('electeurs_inscrits', sa.Integer(), nullable=True),
    sa.Column('personne_contact', sa.String(length=100), nullable=True),
    sa.Column('telephone_contact', sa.String(length=20), nullable=True),
    sa.Column('est_actif', sa.Boolean(), nullable=True),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.Column('date_modification', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('user',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('prenom', sa.String(length=100), nullable=False),
    sa.Column('nom', sa.String(length=100), nullable=False),
    sa.Column('password_hash', sa.String(length=128), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('est_actif', sa.Boolean(), nullable=True),
    sa.Column('derniere_connexion', sa.DateTime(), nullable=True),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.Column('date_modification', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('election',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('nom', sa.String(length=200), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('date_debut', sa.DateTime(), nullable=False),
    sa.Column('date_fin', sa.DateTime(), nullable=False),
    sa.Column('statut', sa.String(length=20), nullable=True),
    sa.Column('type', sa.String(length=50), nullable=False),
    sa.Column('cree_par', sa.Integer(), nullable=False),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.Column('date_modification', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['cree_par'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('session',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('utilisateur_id', sa.Integer(), nullable=False),
    sa.Column('jeton', sa.String(length=255), nullable=False),
    sa.Column('expiration', sa.DateTime(), nullable=False),
    sa.Column('agent_utilisateur', sa.String(length=255), nullable=True),
    sa.Column('adresse_ip', sa.String(length=50), nullable=True),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['utilisateur_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('jeton')
    )
    op.create_table('candidate',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('prenom', sa.String(length=100), nullable=False),
    sa.Column('nom', sa.String(length=100), nullable=False),
    sa.Column('parti', sa.String(length=100), nullable=False),
    sa.Column('logo_parti', sa.String(length=255), nullable=True),
    sa.Column('photo', sa.String(length=255), nullable=True),
    sa.Column('biographie', sa.Text(), nullable=True),
    sa.Column('election_id', sa.Integer(), nullable=False),
    sa.Column('statut', sa.String(length=20), nullable=True),
    sa.Column('cree_par', sa.Integer(), nullable=False),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.Column('date_modification', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['cree_par'], ['user.id'], ),
    sa.ForeignKeyConstraint(['election_id'], ['election.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('resultat_election',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('election_id', sa.Integer(), nullable=False),
    sa.Column('bureau_vote_id', sa.Integer(), nullable=False),
    sa.Column('electeurs_inscrits', sa.Integer(), nullable=True),
    sa.Column('total_votes', sa.Integer(), nullable=True),
    sa.Column('votes_valides', sa.Integer(), nullable=True),
    sa.Column('votes_invalides', sa.Integer(), nullable=True),
    sa.Column('votes_blancs', sa.Integer(), nullable=True),
    sa.Column('resultats_candidats', sa.JSON(), nullable=True),
    sa.Column('soumis_par', sa.Integer(), nullable=False),
    sa.Column('date_soumission', sa.DateTime(), nullable=False),
    sa.Column('statut', sa.String(length=20), nullable=True),
    sa.Column('remarques', sa.Text(), nullable=True),
    sa.Column('date_creation', sa.DateTime(), nullable=True),
    sa.Column('date_modification', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['bureau_vote_id'], ['bureau_de_vote.id'], ),
    sa.ForeignKeyConstraint(['election_id'], ['election.id'], ),
    sa.ForeignKeyConstraint(['soumis_par'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('voting_center',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('election_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['election_id'], ['election.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('voting_office',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('center_id', sa.Integer(), nullable=False),
    sa.Column('total_voters', sa.Integer(), nullable=True),
    sa.Column('blank_votes', sa.Integer(), nullable=True),
    sa.Column('null_votes', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['center_id'], ['voting_center.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('voting_result',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('office_id', sa.Integer(), nullable=False),
    sa.Column('candidate_id', sa.Integer(), nullable=False),
    sa.Column('votes', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['candidate_id'], ['candidate.id'], ),
    sa.ForeignKeyConstraint(['office_id'], ['voting_office.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('voting_result')
    op.drop_table('voting_office')
    op.drop_table('voting_center')
    op.drop_table('resultat_election')
    op.drop_table('candidate')
    op.drop_table('session')
    op.drop_table('election')
    op.drop_table('user')
    op.drop_table('bureau_de_vote')
    # ### end Alembic commands ###
